--- a/doc/plugins/contrib/textile.mdwn
+++ b/doc/plugins/contrib/textile.mdwn
@@ -1,4 +1,6 @@
-# Textile Plugin
+[[template id=plugin name=syntax author="[[mazirian]]"]]
+[[tag type/format]]
+[[meta title="textile (third-party plugin)"]]
 
 Textile is a veratile markup language.  So here's a trivial little plugin that will use the Textile markup language to render .txtl files in your data directory.  You must have Text::Textile installed for it to work.
 
