--- a/doc/plugins/contrib/textile.mdwn
+++ b/doc/plugins/contrib/textile.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=syntax author="[[mazirian]]"]]
+[[template id=plugin name=syntax author="mazirian"]]
 [[tag type/format]]
 [[meta title="textile (third-party plugin)"]]
 
