--- a/doc/plugins/contrib/textile.mdwn
+++ b/doc/plugins/contrib/textile.mdwn
@@ -2,6 +2,9 @@
 [[tag type/format]]
 [[meta title="textile (third-party plugin)"]]
 
-Textile is a veratile markup language.  So here's a trivial little plugin that will use the Textile markup language to render .txtl files in your data directory.  You must have Text::Textile installed for it to work.
+Textile is a veratile markup language.  So here's a trivial little plugin
+that will use the Textile markup language to render .txtl files in your
+data directory.  You must have [[cpan Text::Textile]] installed for it to work.
 
-Download: [textile.pm](http://mazirian.com/files/textile.pm) (December 28, 2006)
+Download: [textile.pm](http://mazirian.com/files/textile.pm) (December 28,
+2006)
