--- a/doc/bugs/underlaydir_file_expose.mdwn
+++ b/doc/bugs/underlaydir_file_expose.mdwn
@@ -1,3 +1,9 @@
 If a file in the srcdir is removed, exposing a file in the underlaydir,
 ikiwiki will not notice the change and rebuild it until the file in the
 underlaydir gets a mtime newer than the mtime the removed file had.
+
+Relatedly, if there are two files with different extensions that build a
+page with the same name, in a directory, ikiwiki will update the page
+whenever either changes, using the changed one as the source. But if that
+most recently changed one is removed, it won't rebuild the page using the
+older one as the source.
