web commit by http://mazirian.myopenid.com/: clarification, licensing.

--- a/doc/plugins/contrib/textile.mdwn
+++ b/doc/plugins/contrib/textile.mdwn
@@ -2,9 +2,11 @@
 [[tag type/format]]
 [[meta title="textile (third-party plugin)"]]
 
-Textile is a veratile markup language.  So here's a trivial little plugin
-that will use the Textile markup language to render .txtl files in your
-data directory.  You must have [[cpan Text::Textile]] installed for it to work.
+Textile is a veratile markup language.  So here's a trivial (in that it is a
+direct adaptation of the wikitext plugin) plugin that will use the Textile 
+markup language to render .txtl files in your data directory.  You must have 
+[[cpan Text::Textile]] installed for it to work. Naturally, it is released under
+the terms of the GPL.
 
 Download: [textile.pm](http://mazirian.com/files/textile.pm) (December 28,
 2006)
