web commit by http://mazirian.myopenid.com/

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -215,3 +215,13 @@ that sort of thing.  Where or how do I submit it for inclusion?
 >>
 >> Ok, fixed (in svn), it will now prefer files in the srcdir over files
 >> in the underlaydir that build the same page, no matter what extension.
+
+>>> Thanks, Joey, much appreciated. --[Mazirian](http://mazirian.com)
+
+# Access Keys
+
+Would anyone else find this a valuable addition.  In oddmuse and instiki (the only other
+wiki engines I am currently using, the edit, home, and submit link tags have an
+accesskey attribute.  I find it nice not to have to resort to the mouse for those
+actions.  However, it may not be something everyone appreciates.  Any thoughts?
+--[Mazirian](http://mazirian.com)
