--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -225,3 +225,11 @@ wiki engines I am currently using, the edit, home, and submit link tags have an
 accesskey attribute.  I find it nice not to have to resort to the mouse for those
 actions.  However, it may not be something everyone appreciates.  Any thoughts?
 --[Mazirian](http://mazirian.com)
+
+----
+
+# Disable build/install requirement on PerlMagick
+
+Some installs of PerlMagick require X11. I tried to first disable using "img" by using "--disable-plugin img"
+in the Makefile. But still failed. My workaround was to remove "img" from the bundle in IkiWiki/Plugin/goodstuff.pm
+before building. What is the recommended way to install ikiwiki without "img" support? --[[JeremyReed]]
