web commit by http://mazirian.myopenid.com/

--- a/doc/todo/spell_check_plug-in.mdwn
+++ b/doc/todo/spell_check_plug-in.mdwn
@@ -3,3 +3,7 @@ A speel chek plug-in woold be fantaztik.  Anyone working on this?
 ----
 
 Knot adz fair ass eye no --[[Joey]]
+
+----
+
+Firefox 2 (or whatever it will be in Debian) does this for you, and then there's the mozex extension
