web commit by http://mazirian.myopenid.com/

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -218,6 +218,8 @@ that sort of thing.  Where or how do I submit it for inclusion?
 
 >>> Thanks, Joey, much appreciated. --[Mazirian](http://mazirian.com)
 
+----
+
 # Access Keys
 
 Would anyone else find this a valuable addition.  In oddmuse and instiki (the only other
@@ -225,6 +227,13 @@ wiki engines I am currently using, the edit, home, and submit link tags have an
 accesskey attribute.  I find it nice not to have to resort to the mouse for those
 actions.  However, it may not be something everyone appreciates.  Any thoughts?
 --[Mazirian](http://mazirian.com)
+
+----
+
+# Editing the style sheet.
+
+It would be nice to be able to edit the stylesheet by means of the cgi.  Or is this possible?  I wasn't able to achieve it.
+Ok, that's my last 2 cents for a while. --[Mazirian](http://mazirian.com)
 
 ----
 
