--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -188,38 +188,6 @@ Moved to [[bugs]] -- [[Joey]]
 
 ----
 
-# Textile Plugin
-
-It was trivial, but I put together a plugin that uses the Textile markup
-language, which I find to be the most superior of the various options for
-that sort of thing.  Where or how do I submit it for inclusion?
-
-> You can post it to [[plugins/contrib]]. --[[Joey]]
-
->> Thanks.  I tried using the "Add new post" form there, but apparently made a [mess of things somehow](http://ikiwiki.kitenet.net/contrib/textile___40__third-party_plugin__41__.html).  Sorry about that.
-
->>> No problem, the contrib form had the wrong rootpage setting. I've fixed
->>> it up and moved it to the right place. A copyright statement would be
->>> nice.
-
-> How does one go about making a markup language added by means of a plugin, the default markup language.  In other words, I would like the index page to be written in Textile.
-> If I include a index.txtl (where txtl is the extension I have assigned to be handled by the textile plugin), ikiwiki will ignore it and make a new index.mdwn.
-
->> Sounds like a bug; it should be configurable via `default_pageext`, but
->> I suspect that currently if there are two competing files with different
->> extensions that make the same page, they fight it out and some random
->> one "wins" 
->> 
->> Until I fix that, you can avoid the one from the underlay directory by
->> setting `underlaydir` to point to an empty directory. --[[Joey]]
->>
->> Ok, fixed (in svn), it will now prefer files in the srcdir over files
->> in the underlaydir that build the same page, no matter what extension.
-
->>> Thanks, Joey, much appreciated. --[Mazirian](http://mazirian.com)
-
-----
-
 # Access Keys
 
 Would anyone else find this a valuable addition.  In oddmuse and instiki (the only other
@@ -227,6 +195,9 @@ wiki engines I am currently using, the edit, home, and submit link tags have an
 accesskey attribute.  I find it nice not to have to resort to the mouse for those
 actions.  However, it may not be something everyone appreciates.  Any thoughts?
 --[Mazirian](http://mazirian.com)
+
+> Maybe, although it would need to take the critisism at
+> http://www.cs.tut.fi/~jkorpela/forms/accesskey.html into account.
 
 ----
 
