* Initial work on internationalization of the program code. po/ikiwiki.pot   is available for translation. * Export gettext() from IkiWiki module.

--- a/doc/bugs/hardcoded___34__Discussion__34___link.mdwn
+++ b/doc/bugs/hardcoded___34__Discussion__34___link.mdwn
@@ -38,5 +38,7 @@ or "History".
 >> In my wiki I use only Polish name of pages, so I would like to have
 >> dyskusja.html page, instead of discussion.html page. --Pawel
 
->>> I have an incomplete i10n patch for such hardcoded strings in the code, 
->>> which I hope to finish up eventually --[[Joey]]
+>>> Ikiwiki is now fully internationalised, so you can change the name of
+>>> the Discussion page and quite a lot more (but hardly everything) by
+>>> translating it. [[bugs/done]]! There's a `po/debconf.pot` in the source
+>>> now for translating. See [[translation]]. --[[Joey]]
