--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -382,6 +382,10 @@ path to the first file found.
 
 Given a time, formats it for display.
 
+#### `gettext`
+
+This is the standard gettext function, although slightly optimised.
+
 ## RCS plugins
 
 ikiwiki's support for revision control systems also uses pluggable perl
