--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ ikiwiki (1.37) UNRELEASED; urgency=low
   * Improve code that ignores files in the underlaydir if the srcdir has a
     file building the same page. Now it will work even if the extensions of
     the source files differ.
+  * Initial work on internationalization of the program code. po/ikiwiki.pot
+    is available for translation.
+  * Export gettext() from IkiWiki module.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 28 Dec 2006 17:13:43 -0500
 
