* Don't put discussion links on discussion pages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,8 +17,9 @@ ikiwiki (1.37) UNRELEASED; urgency=low
   * Initial work on internationalization of the program code. po/ikiwiki.pot
     is available for translation.
   * Export gettext() from IkiWiki module.
+  * Don't put discussion links on discussion pages.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 28 Dec 2006 17:13:43 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 28 Dec 2006 23:40:57 -0500
 
 ikiwiki (1.36) unstable; urgency=low
 
