--- a/doc/bugs/disable_sub-discussion_pages.mdwn
+++ b/doc/bugs/disable_sub-discussion_pages.mdwn
@@ -4,4 +4,4 @@ I do want discussion subpage, but I don't want to have, for example: discussion/
 -- [[JeremyReed]]
 
 > Discussion pages should clearly be a special case that don't get Discussion
-> links put at the top. --[[Joey]]
+> links put at the top... aaand.. [[done]]! --[[Joey]]
