--- a/debian/changelog
+++ b/debian/changelog
@@ -18,8 +18,9 @@ ikiwiki (1.37) UNRELEASED; urgency=low
     is available for translation.
   * Export gettext() from IkiWiki module.
   * Don't put discussion links on discussion pages.
+  * Allow disabling of plugins included in goodstuff.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 28 Dec 2006 23:40:57 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 28 Dec 2006 23:49:11 -0500
 
 ikiwiki (1.36) unstable; urgency=low
 
