* Add a textile format plugin contributed by mazirian.

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -39,7 +39,8 @@ provided by ikiwiki on top of regular markdown is the [[WikiLink]] and
 If you prefer to use some other markup language, ikiwiki allows others to
 easily be added by [[plugins]]. For example it also supports traditional
 [[plugins/WikiText]] formatted pages, pages written as pure
-[[plugins/HTML]], or pages written in [[reStructuredText|plugins/rst]].
+[[plugins/HTML]], or pages written in [[reStructuredText|plugins/rst]]
+or [[Textile|plugins/textile]].
 
 ikiwiki also supports files of any other type, including plain text,
 images, etc. These are not converted to wiki pages, they are just copied
