--- a/debian/changelog
+++ b/debian/changelog
@@ -19,8 +19,9 @@ ikiwiki (1.37) UNRELEASED; urgency=low
   * Export gettext() from IkiWiki module.
   * Don't put discussion links on discussion pages.
   * Allow disabling of plugins included in goodstuff.
+  * Add a textile format plugin contributed by mazirian.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 28 Dec 2006 23:49:11 -0500
+ -- Joey Hess <joeyh@debian.org>  Fri, 29 Dec 2006 00:17:58 -0500
 
 ikiwiki (1.36) unstable; urgency=low
 
