--- a/doc/todo/userdir_links.mdwn
+++ b/doc/todo/userdir_links.mdwn
@@ -1,3 +1,5 @@
 The userdir should be searched at the end of the search "path" for links,
 so that users can put their pages in the userdir, and still link to them
 easily when signing things, without giving a path.
+
+[[todo/done]]
