--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -6,9 +6,9 @@ add your wiki to [[IkiwikiUsers]] if you use ikiwiki.
 The best place to download a tarball of the latest release is from 
 <http://packages.debian.org/unstable/source/ikiwiki>.
 
-# Debian package
+# packages
 
-If using Debian unstable or testing:
+If using Debian unstable or testing, or Ubuntu edgy:
 
         apt-get install ikiwiki
 
@@ -22,13 +22,9 @@ and libcgi-session-perl `4.14-1`
 There is also an unofficial backport of ikiwiki for Debian stable, provided by
 Pawel Tecza, at <http://gpa.net.icm.edu.pl/debian/>.
 
-# Ubuntu
+# revision control
 
-ikiwiki is also available in Ubuntu / Edgy
-
-        apt-get install ikiwiki
-
-# subversion
+## subversion
 
 The current development version of ikiwiki can be accessed using subversion at 
 `svn://ikiwiki.kitenet.net/ikiwiki/trunk`
@@ -36,10 +32,22 @@ The current development version of ikiwiki can be accessed using subversion at
 The source in subversion can be browsed
 [here](http://ikiwiki.kitenet.net/cgi-bin/viewcvs.cgi/trunk/?root=ikiwiki).
 
-If you would like to be subscribed to svn commit messages for ikiwiki,
-mail joey@kitenet.net.
+Commits to ikiwiki's source code are now fed into
+[CIA](http://cia.navi.cx/), and can be browsed, subscribed to etc on its
+[project page](http://cia.navi.cx/stats/project/ikiwiki). Note that changes
+to the documentation wiki are currently excluded.
 
-# arch
+## git
+
+A git mirror of the trunk of the subversion repository is available
+[here](http://ikiwiki.kitenet.net/.git/). This is updated using `git-svn`
+whenever changes are committed to the subversion repository.
+
+In theory, I can merge in changes from git repos that you branch off of this,
+back into the subversion repository, although in practice, I'll need to learn
+a bit more git first. :-)
+
+## arch
 
 An unofficial arch mirror of the subversion repository is at
 `http://arch.debian.org/arch/private/srivasta/archive-2006-misc`
