--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -40,12 +40,8 @@ to the documentation wiki are currently excluded.
 ## git
 
 A git mirror of the trunk of the subversion repository is available
-[here](http://ikiwiki.kitenet.net/.git/). This is updated using `git-svn`
-whenever changes are committed to the subversion repository.
-
-In theory, I can merge in changes from git repos that you branch off of this,
-back into the subversion repository, although in practice, I'll need to learn
-a bit more git first. :-)
+[here](http://ikiwiki.kitenet.net/.git/). It is updated whenever changes
+are committed to the subversion repository.
 
 ## arch
 
