--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -40,8 +40,8 @@ to the documentation wiki are currently excluded.
 ## git
 
 A git mirror of the trunk of the subversion repository is available
-[here](http://ikiwiki.kitenet.net/.git/). It is updated whenever changes
-are committed to the subversion repository.
+[here](http://ikiwiki.kitenet.net/.git/). Its `remotes/git-svn` branch
+is updated whenever changes are committed to the subversion repository.
 
 ## arch
 
