--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -39,12 +39,12 @@ to the documentation wiki are currently excluded.
 
 ## git
 
-A git mirror of the trunk of the subversion repository is available
-[here](http://ikiwiki.kitenet.net/.git/). Its `remotes/git-svn` branch
+A git mirror of the trunk of the subversion repository is available at
+<http://ikiwiki.kitenet.net/.git/>. Its `remotes/git-svn` branch
 is updated whenever changes are committed to the subversion repository.
 
 ## arch
 
 An unofficial arch mirror of the subversion repository is at
-`http://arch.debian.org/arch/private/srivasta/archive-2006-misc`
+<http://arch.debian.org/arch/private/srivasta/archive-2006-misc>
 and can be browsed [here](http://arch.debian.org/cgi-bin/archzoom.cgi/srivasta@debian.org--2006-misc?color=default?layout=larger?expand).
