web commit by TobiOetiker

--- a/doc/plugins/contrib/navbar.mdwn
+++ b/doc/plugins/contrib/navbar.mdwn
@@ -1,3 +1,7 @@
+[[template id=plugin name=navbar author="[[TobiasOetiker]]"]]
+[[meta title="navbar (third-party plugin)"]]
+
+
 The Navbar Plugin renders a Navigation Bar into your page. It is based on code
 from the sidebar plugin see http://ikiwiki.kitenet.net/plugins/sidebar.html
 for details.
@@ -31,3 +35,4 @@ ikiwiki look good anyway, I won't go into details here ...
 
 Tobi Oetiker 2006.12.30    
 
+If you are interested in this, drop me a line tobi at oetiker dot ch
