web commit by TobiOetiker: Made the page more consistant with the site style

--- a/doc/plugins/contrib/navbar.mdwn
+++ b/doc/plugins/contrib/navbar.mdwn
@@ -1,12 +1,12 @@
-[[template id=plugin name=navbar author="[[TobiasOetiker]]"]]
+[[template id=plugin name=navbar author="[[TobiOetiker]]"]]
 [[meta title="navbar (third-party plugin)"]]
 
 
 The Navbar Plugin renders a Navigation Bar into your page. It is based on code
-from the sidebar plugin see http://ikiwiki.kitenet.net/plugins/sidebar.html
+from the sidebar plug in see <http://ikiwiki.kitenet.net/plugins/sidebar.html>
 for details.
 
-The plugin looks for a page called "navbar" 
+The plug in looks for a page called "navbar" 
 
 This page must contain a itemized list of the form
 
