web commit by http://getopenid.com/ptecza: Bug report

--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -7,3 +7,7 @@ for all OpenIDs is a good idea. What's your opinion?
 
 BTW, Happy New Year for you and Debian 'etch' and all ikiwiki
 users! :) --Pawel
+
+>> I've just noticed that '/' character in title of my wish
+>> wasn't escaped and ikiwiki created two pages, instead of one.
+>> It's a bug, of course. --Pawel
