web commit by http://ptecza.myopenid.com/: Rectification

--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -11,3 +11,9 @@ users! :) --Pawel
 >> I've just noticed that '/' character in title of my wish
 >> wasn't escaped and ikiwiki created two pages, instead of one.
 >> It's a bug, of course. --Pawel
+
+>>> Sorry for confusing! I meant two files (directory and page),
+>>> instead of one (page).
+
+>>> BTW, I have some problems with singing in using getopenid.com
+>>> server, so I also use myopenid.com server :) --Pawel
