* Escape shashes in page titles entered in the blog post form. * Munge openids of the form somehost.com/user (trial, may revert)

--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -5,6 +5,9 @@ Could you also please convert "somehost.com/user" OpenID to
 for "user.somehost.com" OpenIDs. I think that same display form
 for all OpenIDs is a good idea. What's your opinion?
 
+> It's probably ok to do this, although there's the potential it might
+> misfire on some url. I've implemented it on a trial basis. --[[Joey]]
+
 BTW, Happy New Year for you and Debian 'etch' and all ikiwiki
 users! :) --Pawel
 
@@ -15,5 +18,9 @@ users! :) --Pawel
 >>> Sorry for confusing! I meant two files (directory and page),
 >>> instead of one (page).
 
+>>>> Yep, fixed. --[[Joey]]
+
 >>> BTW, I have some problems with singing in using getopenid.com
 >>> server, so I also use myopenid.com server :) --Pawel
+
+>>>> They were having some glitches last week.. --[[Joey]]
