--- a/debian/changelog
+++ b/debian/changelog
@@ -23,8 +23,8 @@ ikiwiki (1.37) UNRELEASED; urgency=low
   * If a userdir is configured, links to pages in it can be made without
     specifying the path. This allows for easy signing of comments by linking
     to your page in the userdir.
-  * Escape shashes in page titles entered in the blog post form.
-  * Munge openids of the form somehost.com/user (trial, may revert)
+  * Escape slashes in page titles entered in the blog post form.
+  * Munge openids of the form somehost.com/user (trial, may revert).
 
  -- Joey Hess <joeyh@debian.org>  Sun, 31 Dec 2006 15:30:59 -0500
 
