web commit by http://ptecza.myopenid.com/: Response

--- a/doc/translation/discussion.mdwn
+++ b/doc/translation/discussion.mdwn
@@ -38,6 +38,8 @@ can I do diff for old and new `ikiwiki.pot` file and update only differences?
 
   >>> I'm not a translator, so I don't really know..
 
+  >>>> OK, I hope I handle it :)
+
 4. What about "gettexting" button titles and link names? Do you really
 think that there should be hardcoded in ikiwiki templates? --Pawel
 
@@ -47,3 +49,5 @@ think that there should be hardcoded in ikiwiki templates? --Pawel
   >> instead of 1., 2., 3., 4.)? Where have I made a Markdown mistake? --Pawel
 
   >>> My indentation mistake, I think. --[[Joey]]
+
+  >>>> Now it's perfect :) Thank you very much! --Pawel
