web commit by http://ptecza.myopenid.com/: Response

--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -8,6 +8,10 @@ for all OpenIDs is a good idea. What's your opinion?
 > It's probably ok to do this, although there's the potential it might
 > misfire on some url. I've implemented it on a trial basis. --[[Joey]]
 
+>> Thanks! What version of ikiwiki do you use at ikiwiki.kitenet.net
+>> site? I still can see my "getopenid.com/ptecza" OpenID at
+>> RecentChanges page there... --Pawel
+
 BTW, Happy New Year for you and Debian 'etch' and all ikiwiki
 users! :) --Pawel
 
@@ -20,7 +24,11 @@ users! :) --Pawel
 
 >>>> Yep, fixed. --[[Joey]]
 
+>>>>> Awesome! :) Thanks a lot!
+
 >>> BTW, I have some problems with singing in using getopenid.com
 >>> server, so I also use myopenid.com server :) --Pawel
 
 >>>> They were having some glitches last week.. --[[Joey]]
+
+>>>>> It's good to know :) --Pawel
