had to move the git mirror

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -40,7 +40,7 @@ to the documentation wiki are currently excluded.
 ## git
 
 A git mirror of the trunk of the subversion repository is available at
-<http://ikiwiki.kitenet.net/.git/>. Its `remotes/git-svn` branch
+<http://ikiwiki.kitenet.net/ikiwiki.git/.git>. Its `remotes/git-svn` branch
 is updated whenever changes are committed to the subversion repository.
 
 ## arch
