--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -6,11 +6,13 @@ for "user.somehost.com" OpenIDs. I think that same display form
 for all OpenIDs is a good idea. What's your opinion?
 
 > It's probably ok to do this, although there's the potential it might
-> misfire on some url. I've implemented it on a trial basis. --[[Joey]]
+> misfire on some url. I've implemented it on a trial basis. [[bugs/done]] --[[Joey]]
 
 >> Thanks! What version of ikiwiki do you use at ikiwiki.kitenet.net
 >> site? I still can see my "getopenid.com/ptecza" OpenID at
 >> RecentChanges page there... --Pawel
+
+>>> I use the latest version I trust enough..
 
 BTW, Happy New Year for you and Debian 'etch' and all ikiwiki
 users! :) --Pawel
