--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.37) UNRELEASED; urgency=low
+ikiwiki (1.37) unstable; urgency=low
 
   * Add mirrorlist plugin.
   * Fixed permissions of some files that were 600 in the tarball. (Did not
@@ -26,7 +26,7 @@ ikiwiki (1.37) UNRELEASED; urgency=low
   * Escape slashes in page titles entered in the blog post form.
   * Munge openids of the form somehost.com/user (trial, may revert).
 
- -- Joey Hess <joeyh@debian.org>  Sun, 31 Dec 2006 15:30:59 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 31 Dec 2006 17:31:22 -0500
 
 ikiwiki (1.36) unstable; urgency=low
 
