--- a/doc/whyikiwiki.mdwn
+++ b/doc/whyikiwiki.mdwn
@@ -4,7 +4,7 @@ because "ikiwiki" is a nice palindrome. Partly because its design turns
 the usual design for a Wiki inside-out and backwards.
 
 (BTW, I'm told that "iki" is Finnish for "forever" so ikiwiki is "forever
-wiki".)
+wiki". It's also nice to note that ikiwiki contains a kiwi.)
 
 Oh, maybe you wanted to know why you'd want to choose ikiwiki instead of
 all the other wikis out there? Unless your personal strangeness
