--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -14,6 +14,10 @@ for all OpenIDs is a good idea. What's your opinion?
 
 >>> I use the latest version I trust enough..
 
+>>>> Joey, your regexp is not good enough. Now I can see "tecza [getopenid.com]",
+>>>> instead of "ptecza [getopenid.com]" (you cut first character of my login).
+>>>> --Pawel
+
 BTW, Happy New Year for you and Debian 'etch' and all ikiwiki
 users! :) --Pawel
 
