* Corrected a bum regexp in openid munging.

--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -18,6 +18,8 @@ for all OpenIDs is a good idea. What's your opinion?
 >>>> instead of "ptecza [getopenid.com]" (you cut first character of my login).
 >>>> --Pawel
 
+>>>>> fixed now
+
 BTW, Happy New Year for you and Debian 'etch' and all ikiwiki
 users! :) --Pawel
 
