--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.38) UNRELEASED; urgency=low
+
+  * Corrected a bum regexp in openid munging.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  2 Jan 2007 16:30:48 -0500
+
 ikiwiki (1.37) unstable; urgency=low
 
   * Add mirrorlist plugin.
