web commit by http://getopenid.com/ptecza: Response

--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -20,6 +20,8 @@ for all OpenIDs is a good idea. What's your opinion?
 
 >>>>> fixed now
 
+>>>>>> Yes, now it's OK. Thank you very much! --Pawel
+
 BTW, Happy New Year for you and Debian 'etch' and all ikiwiki
 users! :) --Pawel
 
