--- a/doc/tipjar.mdwn
+++ b/doc/tipjar.mdwn
@@ -1,7 +1,12 @@
-Ikiwiki is [[FreeSoftware]], but you're also free to show your appreciation to [[Joey]] or help offset hosting costs with a donation in any amount you choose.
+Ikiwiki is [[FreeSoftware]], but you're also free to show your appreciation
+to [[Joey]] or help offset hosting costs with a donation in any amount you
+choose.
 
 <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=joey%40kitenet%2enet&item_name=ikiwiki&no_shipping=1&cn=Comments%3f&tax=0&currency_code=USD&lc=US&bn=PP%2dDonationsBF&charset=UTF%2d8"><img src="https://www.paypal.com/en_US/i/btn/x-click-but04.gif" alt="dontate with PayPal" /></a>
 
-If you would like your donation listed here, let [[Joey]] know.
+If you would like your donation listed here, let [[Joey]] know. Thanks to
+the following people for their kind contributions:
+
+* James Westby
 
 (Note that this page is locked to prevent anyone from tampering with the paypal button.)
