* Added a Spanish translation by Victor Moral. * A few translation infrastructure fixes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 ikiwiki (1.38) UNRELEASED; urgency=low
 
   * Corrected a bum regexp in openid munging.
+  * Added a Spanish translation by Victor Moral.
+  * A few translation infrastructure fixes.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  2 Jan 2007 16:30:48 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed,  3 Jan 2007 13:53:55 -0500
 
 ikiwiki (1.37) unstable; urgency=low
 
