--- a/doc/todo/Print_link.mdwn
+++ b/doc/todo/Print_link.mdwn
@@ -6,3 +6,22 @@ Probably it's better to generate a page on the fly as a CGI
 (just the same like for RecentChanges page) when a user
 really needs it, instead to build static printable version
 for all ikiwiki pages. --Pawel
+
+> I've always considered print links to be a sign of a badly designed web
+> site that looks ugly in a printer because it's ugly anywhere, so I may
+> take some convinving. :-) Ikiwiki pages seem like they'd print out ok
+> as-is to me.
+> 
+> (I also often click on print links, just to get a web page that I can
+> read, especially often hoping that it will have the whole article on it,
+> instead of the 99 tiny pagelets nasty websites like to split things into.
+> Have I ever mentioned how much I *hate* the web?)
+> 
+> One option, if your stylesheet contained something that was unpalatable
+> in printing, would be to define an alternate stylesheet optimised for
+> printing, and somehow switch the browser to use that stylesheet when
+> printing a page (it can be switched from a menu in the UI of some
+> browsers, but I'm not sure what a good way would be to switch the
+> stylesheet on the fly without re-rendering the page..)
+>
+> --[[Joey]]
